# linda_salon

./: .gitattributes  .gitignore  manage.py  pyproject.toml  requirements.txt  settings.py  setup.py  urls.py
.github/workflows/: ci.yml
apps/accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py
apps/inventory/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py  0002_gudang.py
apps/inventory/templatetags/: rupiah.py
apps/pelanggan/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/reports/: apps.py  urls.py  views.py
apps/transactions/: admin.py  apps.py  models.py  test_integration.py  tests.py  urls.py  views.py
templates/: base.html  pagination.html
templates/accounts/: login.html  user_confirm_delete.html  user_form.html  user_list.html
templates/inventory/: barang_confirm_delete.html  barang_detail.html  barang_form.html  barang_list.html  dashboard.html  gudang_confirm_delete.html  gudang_form.html  gudang_list.html  kategori_form.html  kategori_list.html
templates/pelanggan/: pelanggan_confirm_delete.html  pelanggan_detail.html  pelanggan_form.html  pelanggan_list.html
templates/reports/: barang.html  barang_print.html  keuangan.html  keuangan_print.html
templates/transactions/: jadwal.html  transaksi_batal.html  transaksi_detail.html  transaksi_form.html  transaksi_invoice.html  transaksi_kembali.html  transaksi_konfirmasi.html  transaksi_list.html  transaksi_print_persiapan.html
(+7 files in other folders)
