[project]
name = "linda-salon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asgiref==3.11.1",
    "Django==4.2.30",
    "django-stubs>=6.0.4",
    "et_xmlfile==2.0.0",
    "openpyxl==3.1.5",
    "pillow==12.2.0",
    "psycopg2-binary==2.9.12",
    "sqlparse==0.5.5",
]

[dependency-groups]
dev = [
    "ruff",
    "pyrefly",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501", "N802", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
project_includes = ["."]
python_version = "3.11"
